fix: country status endpoint
